--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -71,7 +71,7 @@
       justify-content: center;
     }
 
-    @media (min-width: 1440px) {
+    @media (min-width: 1200px) {
       max-width: 114rem;
     }
   }
